# sqorum_app

./: .dockerignore  .gitignore  Dockerfile  README.md  about_the_project.md  generate_data.py  pyproject.toml  render.yaml  render_doc.md  requirements.txt
.streamlit/: config.toml  secrets.toml
app/: Home.py  config_runtime.py  supabase_client.py
app/pages/: 1_Dashboard.py  2_Partenaires.py  3_Decisions_d_activation.py  4_Scoring.py  5_Imports.py  6_Parametres.py
data/: dataset_500_opportunites.csv  dataset_50_partenaires.csv
squorum.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
squorum_core/: __init__.py  explain.py  io.py  schemas.py  scoring.py  statuses.py
